// Objects representing crawler instructions.

import "com/janknspank/database/extensions.proto";

option java_package = "com.janknspank.proto";
option java_outer_classname = "CrawlProto";

message CrawlInstructions {
  repeated ContentSite content_site = 1;
}

message ContentSite {
  // E.g. "nytimes.com".
  optional string root_domain = 1 [
    (required) = YES
  ];

  // E.g. bbc.com, which is the US-site for bbc.co.uk.
  repeated string aka_root_domain = 2;

  // E.g. "https://www.nytimes.com/", "http://sf.curbed.com".
  repeated string start_url = 3 [
    (required) = YES
  ];

  repeated string subdomain_blacklist = 4;

  message PathBlacklist {
    optional string needle = 1 [
      (required) = YES
    ];

    enum Location {
      EQUALS = 1;
      STARTS_WITH = 2;
      ENDS_WITH = 3;
      CONTAINS = 4;
      REGEX_FIND = 5;
      REGEX_MATCH = 6;
    }
    optional Location location = 4 [
      default = STARTS_WITH
    ];
  }
  repeated PathBlacklist path_blacklist = 5;

  repeated string paragraph_selector = 6 [
    (required) = YES
  ];

  // A collection of regular expressions that together identify all article URLs
  // on this site.  If any Pattern matches, the URL is determined to be an
  // article.
  message ArticleUrlPattern {
    // A regular expression specification to run against the article's path.
    optional string path_regex = 1 [
      (required) = YES
    ];

    // If present, a subdomain that this regular expression is restricted to.
    optional string subdomain = 2;
  }
  repeated ArticleUrlPattern article_url_pattern = 7;

  // These are rare: URL query parameters that are actually used to address a
  // unique article.  Any tracking query parameters or UI-configuring query
  // parameters should NOT be listed.  Basically, only put article ID specifiers
  // here, IFF the respective site uses query parameters to address articles.
  repeated string whitelisted_query_parameter = 8;

  // An RSS or Atom URL for getting URLs hosted on this content site.
  repeated string rss_url = 9;

  optional TestInstructions test_instructions = 10 [
    (required) = YES
  ];
}

message TestInstructions {
  message UrlWhitelistChecks {
    repeated string good_url = 1;
    repeated string bad_url = 2;
  }
  optional UrlWhitelistChecks url_whitelist_checks = 1 [
    (required) = YES
  ];

  message ArticleUrlDetectorChecks {
    repeated string article_url = 1;
    repeated string non_article_url = 2;
  }
  optional ArticleUrlDetectorChecks article_url_detector_checks = 2 [
    (required) = YES
  ];
}
